--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
           <ul class="nav pull-right">
               <li><a href="/">Home</a></li>
               <li><a href="/topics">Topics</a></li>
-              <li><a href="/links">Links</a></li>
+              <li><a href="/items">Links</a></li>
           </ul>
         </div>
   </div>
