--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="container">
   <div class="span9">
-	  <h3> Links </h3>
+	  <h1> Links </h1>
 			<%= link_to 'New item', new_item_path(@item), :class => 'btn btn-primary'%>
   </div>
 </div>
