--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <div class="span12">
-<div class="navbar navbar-inverse">
+<div class="navbar">
   <div class="navbar-inner">
     <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-02">
     </button>
