--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="container">
   <div class="span9">
-	  <h3> Topics </h3>
+	  <h1> Topics </h1>
 		<%= link_to 'New topic', new_topic_path(@topic), :class => 'btn btn-primary'%>
   </div>
 </div>
@@ -11,7 +11,7 @@
   <% @topics.each do |topic| %>
 	  <div class="span4 well">
       <i class="icon-edit pull-right"><%= link_to 'Edit', edit_topic_path(topic) %> </i>
-	      <h4><%= link_to topic.name, topic_path(topic) %></h4>
+	      <h4><%= link_to topic.name, topic_path(topic) %> <span class="label label-warning"><%= topic.items.count %></span></h4>
       	<p><%= topic.description %></p>
     </div>
   <% end %>
