--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,14 +1,12 @@
 <div class="container">
   <div class="span9">
 	  <h1> Topics </h1>
-		<%= link_to 'New topic', new_topic_path(@topic), :class => 'btn btn-primary'%>
+		<p><%= link_to 'New topic', new_topic_path(@topic), :class => 'btn btn-primary'%></p>
   </div>
 </div>
 
-  <br />
-
-  <div class="row-fluid">
   <% @topics.each do |topic| %>
+  <div class="row-fluid">
 	  <div class="span4 well">
       <i class="icon-edit pull-right"><%= link_to 'Edit', edit_topic_path(topic) %> </i>
 	      <h4><%= link_to topic.name, topic_path(topic) %> <span class="label label-warning"><%= topic.items.count %></span></h4>
