--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,7 +10,7 @@
 	  <div class="span4 well">
       <i class="icon-edit pull-right"><%= link_to 'Edit', edit_item_path(item) %> </i>
 	      <h4><%= link_to item.title, item.url %></h4>
-      	<p><%= item.description %></p>
+      	<p><%= truncate(item.description, length: 75) %></p>
     </div>
   <% end %>
   </div>
