--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,7 +1,9 @@
 <div class="span5">
 	<h3>Edit Topic</h3>
 		<%= render 'form' %>
-		<%= link_to 'Delete', @topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic?' } %>
+		<% if @topic.items.empty? %>
+    <%= link_to 'Delete', @topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic?' } %>
+    <% end %>
 </div>
 
 
