fixed typo ergh

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="span9">
 	  <h1> Links </h1>
-			<p><%= link_to 'New item', new_item_path(@item), :class => 'btn btn-primary'%></p>
+			<p><%= link_to 'New link', new_item_path(@item), :class => 'btn btn-primary'%></p>
   </div>
 </div>
 
