--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="span3 well">
+<div class="span3">
   <h4>Topics</h4>
   <p> Links are organised into topics. You can create a topic and then add links to it, or you can add links to an existing topic. </p>
   <a class="btn btn-mini btn-primary" href="/topics">View topics </a>
