--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,7 +15,7 @@
     <h4>Links</h4>
     <p><a href="#itemModal" role="button" class="btn btn-mini btn-primary" data-toggle="modal">New link</a></p>
     <% @items.each do |item| %>
-    <p><%= link_to item.title, item_path(item) %></p>
+    <p><%= link_to item.title, item.url %></p>
     <% end %>
   </div>
 </div>
