--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,6 +11,7 @@
       <i class="icon-edit pull-right"><%= link_to 'Edit', edit_item_path(item) %> </i>
 	      <h4><%= link_to item.title, item.url %></h4>
       	<p><%= truncate(item.description, length: 75) %></p>
+        <p><%= link_to 'comments', item_path(item) %> <span class="label label-warning"><%= item.comments.count %></span></p>
     </div>
   <% end %>
   </div>
