--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
-  <div class="span6 well">
-    <h4><%= link_to @item.title, @item.url %></h4>
-    <p><%= @item.description %></p>
+  <div class="span6">
+    <h2><%= link_to @item.title, @item.url %></h2>
+    <p class="lead"><%= @item.description %></p>
     <%= link_to 'Edit link', edit_item_path(@item), :class => 'btn btn-small btn-primary'%>
     <%= link_to 'Cancel', items_path, :class => 'btn btn-small btn-primary' %>
   </div>
