--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid content">
   <div class="container">
     <h2><%= @topic.name %></h2>
-    <p><%= @topic.description %></p>
+    <p class="lead"><%= @topic.description %></p>
   </div>
 
   <% @topic.items.each do |item| %>
