--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,16 +1,24 @@
-<div class="span12">
-<div class="navbar">
+<div class="navbar navbar-inverse">
   <div class="navbar-inner">
     <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-02">
     </button>
-      <a href="/" class="brand">Bookmarks</a>
+      <a href="/" class="brand">Bookmarking</a>
         <div class="nav-collapse collapse" id="nav-collapse-02">
           <ul class="nav pull-right">
-              <li><a href="/">Home</a></li>
-              <li><a href="/topics">Topics</a></li>
-              <li><a href="/items">Links</a></li>
+            <% if user_signed_in? %>
+              <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "<i class='icon-home'></i> #{current_user.username}".html_safe, root_url %></li>
+              <li class="<%= 'active' if current_page?(topics_path) %>"><%= link_to "Topics", topics_path %></li>
+              <li class="<%= 'active' if current_page?(items_path) %>"><%= link_to "Links", items_path %></li>
+              <li class="<%= 'active' if current_page?(edit_user_registration_path) %>"><%= link_to 'Settings', edit_user_registration_path %></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
           </ul>
+
+          <ul class="nav">
+            <% else %>
+              <li class="<%= 'active' if current_page?(new_user_registration_path) %>"><%= link_to "Sign Up", new_user_registration_path %></li>
+              <li class="<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign In", new_user_session_path %></li>
+          </ul>
+          <% end %>
         </div>
   </div>
-</div>
 </div>
