--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
     <%= render 'layouts/navigation' %>
   </header>
   <div class="container">
+    <% flash.each do |name, msg| %>
+    <%= content_tag :div, msg, id: "flash_#{name}" %>
+    <% end %>
+
     <%= yield %>
   </div>
   </div>
