--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,34 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <div class="span12">
+      <h3> Settings </h3>
+    </div>
 
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
+  <div class="span6">
+    <h4>Edit profile</h4>
+    <br>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
+    <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+      <%= f.error_notification %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+      <div class="form-inputs">
+        <%= f.input :name, label: false, :required => true, :autofocus => true, :input_html => { placeholder: "Name", :class => "span4" } %>
+        <%= f.input :email, label: false, :required => true, :input_html => { placeholder: "Email", :class => "span4" } %>
 
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+         <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <%= f.input :password, :autocomplete => "off", label: false, :required => false, :input_html => { placeholder: "New password", :class => "span4" } %>
+        <%= f.input :password_confirmation, :required => false, label: false, :input_html => { placeholder: "Confirm new password", :class => "span4" }%>
+        <%= f.input :current_password, :required => true, label: false, :input_html => { placeholder: "Current password to confirm your changes", :class => "span4" }%>
+        <% f.error :base %>
+      </div>
+
+      <div class="actions">
+        <%= f.button :submit, "Update", :class => 'btn btn-primary' %>
+        <%= link_to 'Cancel', root_path, :class => 'btn' %>
+      </div>
+      <br />
+    <h4>Delete My Account</h4>
+      <p>Unhappy? <%= link_to "delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-
-<%= link_to "Back", :back %>
+  <% end %>
