--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,13 +4,15 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-    <%= f.input :password, :required => true %>
-    <%= f.input :password_confirmation, :required => true %>
+    <%= f.input :name, label: false, :required => true, :autofocus => true, :input_html => { placeholder: "First name", :class => "span4" }%>
+    <%= f.input :email, label: false, :required => true, :input_html => { placeholder: "Email", :class => "span4" } %>
+    <%= f.input :password, label: false, :required => true, :input_html => { placeholder: "Password", :class => "span4" } %>
+    <%= f.input :password_confirmation, label: false, :required => true, :input_html => { placeholder: "Confirm Password", :class => "span4" } %>
+    <% f.error :base %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="actions">
+    <%= f.button :submit, "Sign up", :class => 'btn btn-primary' %>
   </div>
 <% end %>
 
