--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,15 +1,11 @@
 <%= simple_form_for @item do |f| %>
 <%= f.error_notification %>
-<div class="form-inputs">
-  <%= f.input :title, label: false, :required => true, :as => :text, :input_html => { placeholder: "Title", :rows => 1, :min => 10, :maxlength => 450, :class => "span12"} %>
-  <%= f.input :url, label: false, :required => true, :as => :text, :input_html => { placeholder: "URL", :rows => 1, :maxlength => 450, :class => "span12"} %>
-  <%= f.input :description, label: false, :required => true, :as => :text, :input_html => { placeholder: "Description", :rows => 3, :maxlength => 450, :class => "span12" } %>
-  <%= f.association :topic, label: false, :required => true %>
-  <% f.error :base %>
-</div>
+      <%= f.input :title, label: false, :required => true, :as => :text, :input_html => { placeholder: "Title", :rows => 1, :min => 10, :maxlength => 450 } %>
+      <%= f.input :url, label: false, :required => true, :as => :text, :input_html => { placeholder: "URL", :rows => 1, :maxlength => 450 } %>
+      <%= f.input :description, label: false, :required => true, :as => :text, :input_html => { placeholder: "Description", :rows => 3, :maxlength => 450 } %>
+      <%= f.association :topic, label: false, :required => true %>
+      <% f.error :base %>
 
-  <div class="actions">
-    <%= f.submit nil, :class => 'btn btn-primary'%>
-    <%= link_to 'Cancel', items_path, :class => 'btn' %>
-  </div>
+      <%= f.submit nil, :class => 'button'%>
+      <%= link_to 'Cancel', items_path, :class => 'small button' %>
 <% end %>
