--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,17 @@
-<div class="row-fluid content">
-  <div class="container">
+<div class="small-12 columns">
+  <div class="small-4 columns">
     <h2><%= @user_name %></h2>
-    <div class="span4">
+  </div>
+    <div class="small-4 columns">
       <h4> Topics </h4>
       <p><%= @user_topics %></p>
     </div>
-    <div class="span4">
+    <div class="small-4 columns">
       <h4> Links </h4>
     <p><%= @user_items %></p>
     </div>
     <p><%= @user_memberships %></p>
   </div>
-</div>
 
 
 
