--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,7 +1,3 @@
 <% @comments.each do |comment| %>
-<div class="container">
-  <div class="span3">
-    <%= comment.content %>
-  </div>
+  <p><%= comment.content %></p>
 <% end %>
-</div>
