--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,22 @@
-<h2>Sign up</h2>
+<div class="small-12 columns">
+  <h2>Sign up</h2>
+</div>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name, label: false, :required => true, :autofocus => true, :input_html => { placeholder: "First name", :class => "span4" }%>
-    <%= f.input :email, label: false, :required => true, :input_html => { placeholder: "Email", :class => "span4" } %>
-    <%= f.input :password, label: false, :required => true, :input_html => { placeholder: "Password", :class => "span4" } %>
-    <%= f.input :password_confirmation, label: false, :required => true, :input_html => { placeholder: "Confirm Password", :class => "span4" } %>
-    <% f.error :base %>
+  <div class="small-12 columns">
+    <div class="small-4 columns">
+      <%= f.input :name, label: false, :required => true, :autofocus => true, :input_html => { placeholder: "First name" } %>
+      <%= f.input :email, label: false, :required => true, :input_html => { placeholder: "Email" } %>
+      <%= f.input :password, label: false, :required => true, :input_html => { placeholder: "Password" } %>
+      <%= f.input :password_confirmation, label: false, :required => true, :input_html => { placeholder: "Confirm Password" } %>
+      <% f.error :base %>
+      <%= f.button :submit, "Sign up", :class => 'button' %>
+      <% end %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.button :submit, "Sign up", :class => 'btn btn-primary' %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="small-12 columns">
+  <%= render "devise/shared/links" %>
+</div>
