--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="span5">
-	<h3>Edit Link</h3>
+<div class="small-4 columns">
+	<h2>Edit Link</h2>
 		<%= render 'form' %>
 		<%= link_to 'Delete', @item, method: :delete, data: { confirm: 'Are you sure you want to delete this link?' } %>
 </div>
