--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,20 +1,23 @@
-<div class="container">
-  <div class="span9">
-	  <h1> Links </h1>
-			<p><%= link_to 'New link', new_item_path(@item), :class => 'btn btn-primary'%></p>
+<div class="row">
+  <div class="small-4 columns">
+    <h1> Links </h1>
+  </div>
+  <div class="small-8 columns">
+    <p><%= link_to 'New link', new_item_path(@item), :class => 'small button'%></p>
   </div>
 </div>
 
+<div class="small-12 columns">
   <% @items.each do |item| %>
-  <div class="row-fluid">
-	  <div class="span4 well">
-      <i class="icon-edit pull-right"><%= link_to 'Edit', edit_item_path(item) %> </i>
-	      <h4><%= link_to item.title, item.url %></h4>
-      	<p><%= truncate(item.description, length: 95) %></p>
+  <div class="small-4 columns content">
+      <i class="pull-right"><%= link_to 'Edit', edit_item_path(item) %> </i>
+        <h4><%= link_to item.title, item.url %></h4>
+        <p><%= truncate(item.description, length: 95) %></p>
         <p><%= link_to 'comments', item_path(item) %> <span class="label label-warning"><%= item.comments.count %></span></p>
     </div>
   <% end %>
-  </div>
 
-  <%= will_paginate @items, :renderer => BootstrapPagination::Rails %>
+<div class="small-12 columns">
+  <%= will_paginate @items %>
+</div>
 </div>
