--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,14 +1,13 @@
-  <div class="span6">
+  <div class="small-7 columns">
     <h2><%= link_to @item.title, @item.url %></h2>
     <p class="lead"><%= @item.description %></p>
-    <%= link_to 'Edit link', edit_item_path(@item), :class => 'btn btn-small btn-primary'%>
-    <%= link_to 'Cancel', items_path, :class => 'btn btn-small btn-primary' %>
+    <%= link_to 'Edit link', edit_item_path(@item), :class => 'button'%>
+    <%= link_to 'Cancel', items_path, :class => 'small button' %>
   </div>
 
-  <div class="span4">
+  <div class="small-4 columns">
     <h4>Comments</h4>
-    <%= render "comments/comments" %>
-    <%= render "comments/form" %>
+      <%= render "comments/comments" %>
+      <p><%= render "comments/form" %></p>
   </div>
-</div>
 
