added user id to comments and fixed styling

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,6 +12,8 @@
       <li class="divider"></li>
       <li><%= link_to "Topics", topics_path %></li>
       <li class="divider"></li>
+      <li><%= link_to "Groups", groups_path %></li>
+      <li class="divider"></li>
       <li><%= link_to "Items", items_path %></li>
       <li class="divider"></li>
       <li><%= link_to "Members", users_path %></li>
