--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,13 +1,13 @@
-<%= simple_form_for @topic do |f| %>
+<%= simple_form_for @group do |f| %>
 <%= f.error_notification %>
 <div class="form-inputs">
-  <%= f.input :name, label: false, :required => true, :as => :text, :input_html => { placeholder: "Name", :rows => 1, :min => 10, :maxlength => 450 } %>
+  <%= f.input :name, label: false, :required => true, :as => :text, :input_html => { placeholder: "Name", :rows => 1, :min => 10, :maxlength => 450} %>
   <%= f.input :description, label: false, :required => true, :as => :text, :input_html => { placeholder: "Description", :rows => 3, :maxlength => 450 } %>
   <% f.error :base %>
 </div>
 
   <div class="actions">
     <%= f.submit nil, :class => 'button'%>
-    <%= link_to 'Cancel', topics_path(@topic), :class => 'small button' %>
+    <%= link_to 'Cancel', groups_path(@group), :class => 'small button' %>
   </div>
 <% end %>
