--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,9 +1,9 @@
-<div class="span5">
+<div class="small-4 columns">
   <h2>New topic</h2>
 	<%= render 'form' %>
 </div>
 
-<div class="span6">
+<div class="small-7 columns">
 	<h3>Tip</h3>
 	<p class="lead"> Check that the topic doesn't already exist and make sure it is relevant. </p>
 </div>
