--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -13,24 +13,36 @@
   <div class="small-2 columns side-nav">
     <div class="panel">
     <h3>Topics</h3>
-    <%= link_to 'Create topic', new_topic_path(@topic), :class => 'tiny button' %>
+    <%= link_to 'Create topic', new_topic_path(@topic), :class => 'small button' %>
       <ul class="no-bullet">
         <% @topics.each do |topic| %>
         <li><%= link_to topic.name, topic_path(topic) %></li>
       <% end %>
+        <li><%= link_to 'View all', topics_path %></li>
+      </ul>
+      <h3>Members</h3>
+      <ul class="no-bullet">
+        <% @users.each do |user| %>
+        <li><%= link_to user.name, user_path(user) %></li>
+      <% end %>
+      <li><%= link_to 'View all', users_path %></li>
       </ul>
   </div>
 </div>
 
 <div class="small-9 columns">
   <h3> Items </h3>
-  <%= link_to 'Add link', new_item_path(@item), :class => 'tiny button'%>
-      <ul class="no-bullet inline-list">
+  <%= link_to 'Add link', new_item_path(@item), :class => 'small button'%>
+      <ul class="no-bullet">
       <% @items.each do |item| %>
         <div class="small-6 columns content">
           <li><%= link_to item.title, item.url %></li>
           <li><%= truncate(item.description, length: 95) %></li>
-          <li><%= link_to 'comments', item_path(item) %> <span class="label"><%= item.comments.count %></span></li>
+            <ul class="no-bullet inline-list">
+              <li><%= link_to 'comments', item_path(item) %></li>
+              <li><%= link_to item.topic.user.name, item.topic.user, :class => 'tiny button' %></li>
+              <li><%= link_to item.topic.name, item.topic, :class => 'tiny button' %></li>
+            </ul>
         </div>
         <li class="divider"></li>
       <% end %>
