--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,18 +1,28 @@
-<div class="row">
-  <div class="small-4 columns">
-    <h1> Topics </h1>
+<div class="small-4 columns">
+    <h2>Topics</h2>
   </div>
   <div class="small-8 columns">
-		<p><%= link_to 'New topic', new_topic_path(@topic), :class => 'small button'%></p>
+    <div class="small-8 columns">
+      <ul class="no-bullet pull-right">
+        <li>Currently <%= @topics.count %> topics</li>
+        <li><%= link_to 'New topic', new_topic_path(@topic), :class => 'small button'%></li>
+      </ul>
+    </div>
   </div>
-</div>
 
 <div class="small-12 columns">
   <% @topics.each do |topic| %>
   <div class="small-4 columns content">
       <i class="pull-right"><%= link_to 'Edit', edit_topic_path(topic) %> </i>
-	      <h4><%= link_to topic.name, topic_path(topic) %> <span class="label label-warning"><%= topic.items.count %></span></h4>
-      	<p><%= truncate(topic.description, length: 95) %></p>
+        <ul class="no-bullet">
+          <li><h4><%= link_to topic.name, topic %></h4></li>
+          <li><p><%= truncate(topic.description, length: 95) %><p></li>
+            <ul class="no-bullet inline-list">
+              <li><%= link_to 'comments', topic_path(topic) %></li>
+              <li><%= link_to topic.user.name, topic.user, :class => 'tiny button' %></li>
+              <li><%= link_to topic.name, topic, :class => 'tiny button' %></li>
+            </ul>
+          </ul>
     </div>
   <% end %>
 
