--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="small-4 columns">
-    <h3 class="name"> WDI Learn to Code </h3>
+    <h3 class="name"> <%= @group.name %> </h3>
   </div>
   <div class="small-8 columns">
     <h4 class="subheader"> A place to save and organise useful coding resources.</h4>
@@ -13,35 +13,35 @@
   <div class="small-2 columns side-nav">
     <div class="panel">
     <h3>Topics</h3>
-    <%= link_to 'Create topic', new_topic_path(@topic), :class => 'small button' %>
+    <%= link_to 'Create topic', new_group_topic_path(@group, @topic), :class => 'small button' %>
       <ul class="no-bullet">
-        <% @topics.each do |topic| %>
-        <li><%= link_to topic.name, topic_path(topic) %></li>
+        <% @group.topics.each do |topic| %>
+        <li><%= link_to topic.name, group_topic_path(@group, topic) %></li>
       <% end %>
         <li><%= link_to 'View all', topics_path %></li>
       </ul>
       <h3>Members</h3>
       <ul class="no-bullet">
-        <% @users.each do |user| %>
-        <li><%= link_to user.name, user_path(user) %></li>
+        <% @group.users.each do |user| %>
+        <li><%= link_to user.name, group_user_path(@group, user) %></li>
       <% end %>
-      <li><%= link_to 'View all', users_path %></li>
+      <li><%= link_to 'View all', groups_user_path %></li>
       </ul>
   </div>
 </div>
 
 <div class="small-9 columns">
   <h3> Items </h3>
-  <%= link_to 'Add link', new_item_path(@item), :class => 'small button'%>
+  <%= link_to 'Add link', new_group_item_path(@group, @item), :class => 'small button'%>
       <ul class="no-bullet">
-      <% @items.each do |item| %>
+      <% @group.items.each do |item| %>
         <div class="small-6 columns content">
           <li><%= link_to item.title, item.url %></li>
           <li><%= truncate(item.description, length: 95) %></li>
             <ul class="no-bullet inline-list">
-              <li><%= link_to 'comments', item_path(item) %></li>
-              <li><%= link_to item.topic.user.name, item.topic.user, :class => 'tiny button' %></li>
-              <li><%= link_to item.topic.name, item.topic, :class => 'tiny button' %></li>
+              <li><%= link_to 'comments', group_item_path(@group, item) %></li>
+              <li><%= link_to item.topic.user.name, group_user_path(@group, item.topic.user), :class => 'tiny button' %></li>
+              <li><%= link_to item.topic.name, group_topic_path(@group, item.topic), :class => 'tiny button' %></li>
             </ul>
         </div>
         <li class="divider"></li>
