--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -18,14 +18,14 @@
         <% @group.topics.each do |topic| %>
         <li><%= link_to topic.name, group_topic_path(@group, topic) %></li>
       <% end %>
-        <li><%= link_to 'View all', topics_path %></li>
+        <li><%= link_to 'View all', group_topics_path(@group) %></li>
       </ul>
       <h3>Members</h3>
       <ul class="no-bullet">
         <% @group.users.each do |user| %>
         <li><%= link_to user.name, group_user_path(@group, user) %></li>
       <% end %>
-      <li><%= link_to 'View all', groups_user_path %></li>
+      <li><%= link_to 'View all', group_user_path(@group) %></li>
       </ul>
   </div>
 </div>
