--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @topic do |f| %>
+<%= simple_form_for [@group, @topic] do |f| %>
 <%= f.error_notification %>
 <div class="form-inputs">
   <%= f.input :name, label: false, :required => true, :as => :text, :input_html => { placeholder: "Name", :rows => 1, :min => 10, :maxlength => 450 } %>
@@ -8,6 +8,6 @@
 
   <div class="actions">
     <%= f.submit nil, :class => 'button'%>
-    <%= link_to 'Cancel', topics_path(@topic), :class => 'small button' %>
+    <%= link_to 'Cancel', group_topics_path(@group, @topic), :class => 'small button' %>
   </div>
 <% end %>
