--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,16 +10,16 @@
 <div class="small-12 columns">
   <% @topic.items.each do |item| %>
   <div class="small-4 columns content">
-      <i class="pull-right"><%= link_to 'Edit', edit_item_path(item) %> </i>
+      <i class="pull-right"><%= link_to 'Edit', edit_group_item_path(@group, item) %> </i>
         <h4><%= link_to item.title, item.url %></h4>
         <p><%= truncate(item.description, length: 75) %></p>
-        <p><%= link_to 'comments', item_path(item) %> <span class="label label-warning"><%= item.comments.count %></span></p>
+        <p><%= link_to 'comments', group_item_path(@group, item) %> <span class="label label-warning"><%= item.comments.count %></span></p>
     </div>
   <% end %>
 
 <div class="small-12 columns">
-  <%= link_to 'Edit topic', edit_topic_path(@topic), :class => 'button'%>
-  <%= link_to 'Cancel', topics_path, :class => 'small button' %>
+  <%= link_to 'Edit topic', edit_group_topic_path(@group, @topic), :class => 'button'%>
+  <%= link_to 'Cancel', group_topics_path(@group), :class => 'small button' %>
 </div>
 
 
